Build/Installation/build/lib/gasd_parser/parser/generated/grammar/GASDParser.py
# Generated from Impl/grammar/GASDParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class GASDParser ( Parser ):

    grammarFileName = "GASDParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'CONTEXT'", "'TARGET'", "'TRACE'", "'NAMESPACE'", 
                     "'IMPORT'", "'AS'", "'DECISION'", "'CHOSEN'", "'RATIONALE'", 
                     "'ALTERNATIVES'", "'AFFECTS'", "'TYPE'", "'List'", 
                     "'Map'", "'Enum'", "'Optional'", "'COMPONENT'", "'INTERFACE'", 
                     "'PATTERN'", "'DEPENDENCIES'", "'FLOW'", "'VALIDATE'", 
                     "'ACHIEVE'", "'CREATE'", "'PERSIST'", "'RETURN'", "'LOG'", 
                     "'ENSURE'", "'OTHERWISE'", "'THROW'", "'EXECUTE'", 
                     "'TRANSFORM'", "'UPDATE'", "'APPLY'", "'WITH'", "'ON_ERROR'", 
                     "'IF'", "'ELSE'", "'via'", "'CONTAINS'", "'HAS'", "'to'", 
                     "'RESOURCES'", "'STRATEGY'", "'ALGORITHM'", "'PRECONDITION'", 
                     "'COMPLEXITY'", "'INPUT'", "'OUTPUT'", "'SORT_KEY'", 
                     "'ORDER'", "'IS NOT'", "'IS'", "'NOT'", "'AND'", "'OR'", 
                     "'CONSTRAINT'", "'INVARIANT'", "'MATCH'", "'DEFAULT'", 
                     "'QUESTION'", "'APPROVE'", "'STATUS'", "'BY'", "'DATE'", 
                     "'NOTES'", "'BLOCKING'", "'TODO'", "'REVIEW'", "':'", 
                     "'`'", "','", "'.'", "'->'", "'('", "')'", "'['", "']'", 
                     "'<'", "'>'", "'='", "'{'", "'}'", "'...'", "'@'", 
                     "'^'", "'''", "'*'", "'+'", "'-'", "'/'", "'=='", "'!='", 
                     "'<='", "'>='", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'|'", "'<INDENT>'", 
                     "'<DEDENT>'", "<INVALID>", "<INVALID>", "'#'" ]

    symbolicNames = [ "<INVALID>", "LINE_COMMENT", "BLOCK_COMMENT", "MARKDOWN_FENCE", 
                      "DOC_COMMENT", "CONTEXT_KW", "TARGET_KW", "TRACE_KW", 
                      "NAMESPACE_KW", "IMPORT_KW", "AS_KW", "DECISION_KW", 
                      "CHOSEN_KW", "RATIONALE_KW", "ALTERNATIVES_KW", "AFFECTS_KW", 
                      "TYPE_KW", "LIST_KW", "MAP_KW", "ENUM_KW", "OPTIONAL_KW", 
                      "COMPONENT_KW", "INTERFACE_KW", "PATTERN_KW", "DEPENDENCIES_KW", 
                      "FLOW_KW", "VALIDATE_KW", "ACHIEVE_KW", "CREATE_KW", 
                      "PERSIST_KW", "RETURN_KW", "LOG_KW", "ENSURE_KW", 
                      "OTHERWISE_KW", "THROW_KW", "EXECUTE_KW", "TRANSFORM_KW", 
                      "UPDATE_KW", "APPLY_KW", "WITH_KW", "ON_ERROR_KW", 
                      "IF_KW", "ELSE_KW", "VIA_KW", "CONTAINS_KW", "HAS_KW", 
                      "TO_KW", "RESOURCES_KW", "STRATEGY_KW", "ALGORITHM_KW", 
                      "PRECONDITION_KW", "COMPLEXITY_KW", "INPUT_KW", "OUTPUT_KW", 
                      "SORT_KEY_KW", "ORDER_KW", "IS_NOT_KW", "IS_KW", "NOT_KW", 
                      "AND_KW", "OR_KW", "CONSTRAINT_KW", "INVARIANT_KW", 
                      "MATCH_KW", "DEFAULT_KW", "QUESTION_KW", "APPROVE_KW", 
                      "STATUS_KW", "BY_KW", "DATE_KW", "NOTES_KW", "BLOCKING_KW", 
                      "TODO_KW", "REVIEW_KW", "COLON", "BACKTICK", "COMMA", 
                      "DOT", "ARROW", "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", 
                      "LANGLE", "RANGLE", "EQUALS", "LBRACE", "RBRACE", 
                      "ELLIPSIS", "AT", "CARET", "SQUOTE", "ASTERISK", "PLUS", 
                      "MINUS", "SLASH", "EQ_OP", "NE_OP", "LE_OP", "GE_OP", 
                      "STEP_NUM", "BOOLEAN_LITERAL", "INTEGER", "FLOAT_LITERAL", 
                      "STRING_LITERAL", "IDENTIFIER", "OR_OP", "INDENT", 
                      "DEDENT", "NEWLINE", "WS", "HASH" ]

    RULE_gasd_file = 0
    RULE_section = 1
    RULE_context_dir = 2
    RULE_target_dir = 3
    RULE_trace_dir = 4
    RULE_namespace_stmt = 5
    RULE_import_stmt = 6
    RULE_decision_blk = 7
    RULE_type_def = 8
    RULE_field_def = 9
    RULE_type_expr = 10
    RULE_component_def = 11
    RULE_component_body_item = 12
    RULE_bullet_item = 13
    RULE_method_sig = 14
    RULE_param_list = 15
    RULE_param = 16
    RULE_flow_def = 17
    RULE_flow_step = 18
    RULE_internal_block = 19
    RULE_otherwise_stmt = 20
    RULE_step_property = 21
    RULE_permissive_token = 22
    RULE_action = 23
    RULE_action_id = 24
    RULE_control_flow = 25
    RULE_match_section = 26
    RULE_match_expr = 27
    RULE_match_case = 28
    RULE_match_pattern = 29
    RULE_match_case_block_items = 30
    RULE_ensure_stmt = 31
    RULE_strategy_def = 32
    RULE_strategy_item = 33
    RULE_constraint_stmt = 34
    RULE_invariant_stmt = 35
    RULE_question_stmt = 36
    RULE_approve_blk = 37
    RULE_todo_stmt = 38
    RULE_review_stmt = 39
    RULE_value = 40
    RULE_value_list = 41
    RULE_named_arg = 42
    RULE_base_value = 43
    RULE_list_literal = 44
    RULE_map_literal = 45
    RULE_map_entry = 46
    RULE_expr = 47
    RULE_comparison_op = 48
    RULE_annotations = 49
    RULE_annotation = 50
    RULE_soft_id = 51

    ruleNames =  [ "gasd_file", "section", "context_dir", "target_dir", 
                   "trace_dir", "namespace_stmt", "import_stmt", "decision_blk", 
                   "type_def", "field_def", "type_expr", "component_def", 
                   "component_body_item", "bullet_item", "method_sig", "param_list", 
                   "param", "flow_def", "flow_step", "internal_block", "otherwise_stmt", 
                   "step_property", "permissive_token", "action", "action_id", 
                   "control_flow", "match_section", "match_expr", "match_case", 
                   "match_pattern", "match_case_block_items", "ensure_stmt", 
                   "strategy_def", "strategy_item", "constraint_stmt", "invariant_stmt", 
                   "question_stmt", "approve_blk", "todo_stmt", "review_stmt", 
                   "value", "value_list", "named_arg", "base_value", "list_literal", 
                   "map_literal", "map_entry", "expr", "comparison_op", 
                   "annotations", "annotation", "soft_id" ]

    EOF = Token.EOF
    LINE_COMMENT=1
    BLOCK_COMMENT=2
    MARKDOWN_FENCE=3
    DOC_COMMENT=4
    CONTEXT_KW=5
    TARGET_KW=6
    TRACE_KW=7
    NAMESPACE_KW=8
    IMPORT_KW=9
    AS_KW=10
    DECISION_KW=11
    CHOSEN_KW=12
    RATIONALE_KW=13
    ALTERNATIVES_KW=14
    AFFECTS_KW=15
    TYPE_KW=16
    LIST_KW=17
    MAP_KW=18
    ENUM_KW=19
    OPTIONAL_KW=20
    COMPONENT_KW=21
    INTERFACE_KW=22
    PATTERN_KW=23
    DEPENDENCIES_KW=24
    FLOW_KW=25
    VALIDATE_KW=26
    ACHIEVE_KW=27
    CREATE_KW=28
    PERSIST_KW=29
    RETURN_KW=30
    LOG_KW=31
    ENSURE_KW=32
    OTHERWISE_KW=33
    THROW_KW=34
    EXECUTE_KW=35
    TRANSFORM_KW=36
    UPDATE_KW=37
    APPLY_KW=38
    WITH_KW=39
    ON_ERROR_KW=40
    IF_KW=41
    ELSE_KW=42
    VIA_KW=43
    CONTAINS_KW=44
    HAS_KW=45
    TO_KW=46
    RESOURCES_KW=47
    STRATEGY_KW=48
    ALGORITHM_KW=49
    PRECONDITION_KW=50
    COMPLEXITY_KW=51
    INPUT_KW=52
    OUTPUT_KW=53
    SORT_KEY_KW=54
    ORDER_KW=55
    IS_NOT_KW=56
    IS_KW=57
    NOT_KW=58
    AND_KW=59
    OR_KW=60
    CONSTRAINT_KW=61
    INVARIANT_KW=62
    MATCH_KW=63
    DEFAULT_KW=64
    QUESTION_KW=65
    APPROVE_KW=66
    STATUS_KW=67
    BY_KW=68
    DATE_KW=69
    NOTES_KW=70
    BLOCKING_KW=71
    TODO_KW=72
    REVIEW_KW=73
    COLON=74
    BACKTICK=75
    COMMA=76
    DOT=77
    ARROW=78
    LPAREN=79
    RPAREN=80
    LBRACKET=81
    RBRACKET=82
    LANGLE=83
    RANGLE=84
    EQUALS=85
    LBRACE=86
    RBRACE=87
    ELLIPSIS=88
    AT=89
    CARET=90
    SQUOTE=91
    ASTERISK=92
    PLUS=93
    MINUS=94
    SLASH=95
    EQ_OP=96
    NE_OP=97
    LE_OP=98
    GE_OP=99
    STEP_NUM=100
    BOOLEAN_LITERAL=101
    INTEGER=102
    FLOAT_LITERAL=103
    STRING_LITERAL=104
    IDENTIFIER=105
    OR_OP=106
    INDENT=107
    DEDENT=108
    NEWLINE=109
    WS=110
    HASH=111

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Gasd_fileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(GASDParser.EOF, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(GASDParser.NEWLINE)
            else:
                return self.getToken(GASDParser.NEWLINE, i)

        def section(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GASDParser.SectionContext)
            else:
                return self.getTypedRuleContext(GASDParser.SectionContext,i)


        def getRuleIndex(self):
            return GASDParser.RULE_gasd_file

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGasd_file" ):
                listener.enterGasd_file(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGasd_file" ):
                listener.exitGasd_file(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGasd_file" ):
                return visitor.visitGasd_file(self)
            else:
                return visitor.visitChildren(self)




    def gasd_file(self):

        localctx = GASDParser.Gasd_fileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_gasd_file)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 104
                    self.match(GASDParser.NEWLINE) 
                self.state = 109
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & -2305561529906295840) != 0) or ((((_la - 65)) & ~0x3f) == 0 and ((1 << (_la - 65)) & 17592202822019) != 0):
                self.state = 110
                self.section()
                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 116
            self.match(GASDParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def context_dir(self):
            return self.getTypedRuleContext(GASDParser.Context_dirContext,0)


        def target_dir(self):
            return self.getTypedRuleContext(GASDParser.Target_dirContext,0)


        def trace_dir(self):
            return self.getTypedRuleContext(GASDParser.Trace_dirContext,0)


        def namespace_stmt(self):
            return self.getTypedRuleContext(GASDParser.Namespace_stmtContext,0)


        def import_stmt(self):
            return self.getTypedRuleContext(GASDParser.Import_stmtContext,0)


        def decision_blk(self):
            return self.getTypedRuleContext(GASDParser.Decision_blkContext,0)


        def type_def(self):
            return self.getTypedRuleContext(GASDParser.Type_defContext,0)


        def component_def(self):
            return self.getTypedRuleContext(GASDParser.Component_defContext,0)


        def flow_def(self):
            return self.getTypedRuleContext(GASDParser.Flow_defContext,0)


        def strategy_def(self):
            return self.getTypedRuleContext(GASDParser.Strategy_defContext,0)


        def constraint_stmt(self):
            return self.getTypedRuleContext(GASDParser.Constraint_stmtContext,0)


        def invariant_stmt(self):
            return self.getTypedRuleContext(GASDParser.Invariant_stmtContext,0)


        def ensure_stmt(self):
            return self.getTypedRuleContext(GASDParser.Ensure_stmtContext,0)


        def match_section(self):
            return self.getTypedRuleContext(GASDParser.Match_sectionContext,0)


        def question_stmt(self):
            return self.getTypedRuleContext(GASDParser.Question_stmtContext,0)


        def approve_blk(self):
            return self.getTypedRuleContext(GASDParser.Approve_blkContext,0)


        def todo_stmt(self):
            return self.getTypedRuleContext(GASDParser.Todo_stmtContext,0)


        def review_stmt(self):
            return self.getTypedRuleContext(GASDParser.Review_stmtContext,0)


        def annotations(self):
            return self.getTypedRuleContext(GASDParser.AnnotationsContext,0)


        def NEWLINE(self):
            return self.getToken(GASDParser.NEWLINE, 0)

        def getRuleIndex(self):
            return GASDParser.RULE_section

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSection" ):
                listener.enterSection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSection" ):
                listener.exitSection(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSection" ):
                return visitor.visitSection(self)
            else:
                return visitor.visitChildren(self)




    def section(self):

        localctx = GASDParser.SectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_section)
        try:
            self.state = 140
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5]:
                self.enterOuterAlt(localctx, 1)
                self.state = 118
                self.context_dir()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 119
                self.target_dir()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 3)
                self.state = 120
                self.trace_dir()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 4)
                self.state = 121
                self.namespace_stmt()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 5)
                self.state = 122
                self.import_stmt()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 6)
                self.state = 123
                self.decision_blk()
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 7)
                self.state = 124
                self.type_def()
                pass
            elif token in [21]:
                self.enterOuterAlt(localctx, 8)
                self.state = 125
                self.component_def()
                pass
            elif token in [25]:
                self.enterOuterAlt(localctx, 9)
                self.state = 126
                self.flow_def()
                pass
            elif token in [48]:
                self.enterOuterAlt(localctx, 10)
                self.state = 127
                self.strategy_def()
                pass
            elif token in [61]:
                self.enterOuterAlt(localctx, 11)
                self.state = 128
                self.constraint_stmt()
                pass
            elif token in [62]:
                self.enterOuterAlt(localctx, 12)
                self.state = 129
                self.invariant_stmt()
                pass
            elif token in [32]:
                self.enterOuterAlt(localctx, 13)
                self.state = 130
                self.ensure_stmt()
                pass
            elif token in [63]:
                self.enterOuterAlt(localctx, 14)
                self.state = 131
                self.match_section()
                pass
            elif token in [65]:
                self.enterOuterAlt(localctx, 15)
                self.state = 132
                self.question_stmt()
                pass
            elif token in [66]:
                self.enterOuterAlt(localctx, 16)
                self.state = 133
                self.approve_blk()
                pass
            elif token in [72]:
                self.enterOuterAlt(localctx, 17)
                self.state = 134
                self.todo_stmt()
                pass
            elif token in [73]:
                self.enterOuterAlt(localctx, 18)
                self.state = 135
                self.review_stmt()
                pass
            elif token in [89]:
                self.enterOuterAlt(localctx, 19)
                self.state = 136
                self.annotations()
                self.state = 137
                self.match(GASDParser.NEWLINE)
                pass
            elif token in [109]:
                self.enterOuterAlt(localctx, 20)
                self.state = 139
                self.match(GASDParser.NEWLINE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Context_dirContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONTEXT_KW(self):
            return self.getToken(GASDParser.CONTEXT_KW, 0)

        def COLON(self):
            return self.getToken(GASDParser.COLON, 0)

        def value_list(self):
            return self.getTypedRuleContext(GASDParser.Value_listContext,0)


        def NEWLINE(self):
            return self.getToken(GASDParser.NEWLINE, 0)

        def getRuleIndex(self):
            return GASDParser.RULE_context_dir

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterContext_dir" ):
                listener.enterContext_dir(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitContext_dir" ):
                listener.exitContext_dir(self)
